# happy_weekly_mailing

./: .env.example  .gitignore  .netrc.example  QUICKSTART.md  README.md  main.py  pyproject.toml
.claude/skills/sync_cal/: SKILL.md
.github/workflows/: send-weekly-mailing.yml
happy_weekly_mailing/: __init__.py  calendar_fetcher.py  email_generator.py  email_sender.py  main.py  website_recap_fetcher.py
templates/: design_classique.html  design_festif.html  design_minimaliste.html  design_moderne.html
tests/: test_email_generator.py  test_website_recap_fetcher.py
